# CS160-GoGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_submodules.sh  run_cmake.sh
.github/workflows/: cmake-multi-platform.yml
include/: .UI.h.swp  AI.h  Board.h  Game.h  UI.h
notes_src/: Board.cpp  Board.h  Game.cpp  Game.h
saves/: slot1.sav  slot5.sav
src/: AI.cpp  Board.cpp  Game.cpp  UI.cpp  main.cpp
